fixes results preview display on small screen

--- a/src/Components/App/App.module.css
+++ b/src/Components/App/App.module.css
@@ -63,6 +63,11 @@
     margin: 16px 0 0 0;
 }
 
+.placeholderDefinition {
+    grid-column: 2;
+    grid-row: 1 / 3;
+}
+
 .placeholderDefinition2 {
     display: none;
 }
